将Base64Kit中使用的类换为java8的